Coding exercise 20: Fixing errors. Also wrap up for this section "Debugging"

--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,17 @@ body {
 .center {
   text-align: center;
 }
+
+
+
+
+
+
+/**** Coding Exercise 20 ****/
+/* body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 3rem;
+  background-color: #2d2c2c;
+  color: #959090;
+} */
